MODEXPS-298. Sonar qube fixes